--- a/notebook/02_embeddings_unsupervised.ipynb
+++ b/notebook/02_embeddings_unsupervised.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from __future__ import annotations\n",
     "import sys; sys.path.insert(0, '..')\n",
@@ -76075,9 +76066,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Puesto</th>\n",
+       "      <th>Recomendación</th>\n",
+       "      <th>Similitud</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>aim song</td>\n",
+       "      <td>0.226851</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>way wind blow</td>\n",
+       "      <td>0.200077</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>keumganggul diamond cave</td>\n",
+       "      <td>0.197809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>ballad salvat armi</td>\n",
+       "      <td>0.195655</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>fortuna</td>\n",
+       "      <td>0.194555</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Puesto             Recomendación  Similitud\n",
+       "0       1                  aim song   0.226851\n",
+       "1       2             way wind blow   0.200077\n",
+       "2       3  keumganggul diamond cave   0.197809\n",
+       "3       4        ballad salvat armi   0.195655\n",
+       "4       5                   fortuna   0.194555"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "def recommendation_corr(\n",
     "    query_title: str,\n",
@@ -76120,6 +76185,117 @@
     ")\n",
     "\n",
     "display(recom_tfidf_corr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Puesto</th>\n",
+       "      <th>title</th>\n",
+       "      <th>prob_tema</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>scene life capit</td>\n",
+       "      <td>0.972802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>homo antarcticu</td>\n",
+       "      <td>0.964357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>east carthag idyl</td>\n",
+       "      <td>0.963567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>letter america abecedari</td>\n",
+       "      <td>0.962815</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>heart needl</td>\n",
+       "      <td>0.962639</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Puesto                     title  prob_tema\n",
+       "0       1          scene life capit   0.972802\n",
+       "1       2           homo antarcticu   0.964357\n",
+       "2       3         east carthag idyl   0.963567\n",
+       "3       4  letter america abecedari   0.962815\n",
+       "4       5               heart needl   0.962639"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Modelo LDA con sklearn\n",
+    "lda_model = LatentDirichletAllocation(\n",
+    "    n_components=7,\n",
+    "    random_state=0\n",
+    ")\n",
+    "lda_topics = lda_model.fit_transform(tfidf_matrix)\n",
+    "\n",
+    "# Identificar tema principal del poema 'black herald'\n",
+    "idx_cuento = new_poems_df[new_poems_df.title == 'black herald'].index[0]\n",
+    "tema_principal = lda_topics[idx_cuento].argmax()\n",
+    "\n",
+    "# Probabilidades de pertenecer al tema principal\n",
+    "prob_tema_principal = lda_topics[:, tema_principal]\n",
+    "\n",
+    "# Construir ranking de recomendaciones\n",
+    "df_recom = new_poems_df[[\"title\"]].copy()\n",
+    "df_recom[\"prob_tema\"] = prob_tema_principal\n",
+    "\n",
+    "# eliminar el mismo poema 'black herald'\n",
+    "df_recom = df_recom[df_recom[\"title\"] != 'black herald']\n",
+    "\n",
+    "# ordenar por mayor probabilidad\n",
+    "df_recom = df_recom.sort_values(\"prob_tema\", ascending=False)\n",
+    "\n",
+    "# top N recomendaciones\n",
+    "top_recom = df_recom.head(5).reset_index(drop=True)\n",
+    "top_recom.insert(0, \"Puesto\", range(1, len(top_recom) + 1))\n",
+    "\n",
+    "display(top_recom)"
    ]
   }
  ],
