--- a/notebook/03_embeddings_supervised.ipynb
+++ b/notebook/03_embeddings_supervised.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from __future__ import annotations\n",
     "import sys; sys.path.insert(0, '..')\n",
@@ -45,6 +36,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.multiclass import OneVsRestClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import jaccard_score # Métrica común para multilabel\n",
     "from sklearn.exceptions import ConvergenceWarning\n",
     "\n",
@@ -69,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +319,7 @@
        "3                     xiii  [living]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,6 +328,125 @@
     "pd.DataFrame(dict(\n",
     "    title=cv_df.title.values, \n",
     "    tags=list(map(list,ycv_pred)))\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Jaccard Score (Micro): 0.0719\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. Definición del modelo (Random Forest Regressor OVR con Regresión Logística)\n",
+    "regr = OneVsRestClassifier(\n",
+    "    RandomForestRegressor(max_depth=2, random_state=0)\n",
+    ")\n",
+    "\n",
+    "# 3. Entrenamiento del modelo\n",
+    "regr.fit(X_train, y_train)\n",
+    "\n",
+    "# 4. Predicción\n",
+    "y_pred_regr = regr.predict(X_test)\n",
+    "\n",
+    "# 5. Evaluación\n",
+    "# jaccard_score es una métrica útil para problemas multilabel\n",
+    "jaccard_micro = jaccard_score(y_test, y_pred_regr, average='micro')\n",
+    "\n",
+    "print(f\"\\nJaccard Score (Micro): {jaccard_micro:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ycv_pred_regr = mlb.inverse_transform(\n",
+    "    regr.predict(Xcv)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>tags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>black herald</td>\n",
+       "      <td>[living]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>black stone white stone</td>\n",
+       "      <td>[living]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>pari octob poem</td>\n",
+       "      <td>[living]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>xiii</td>\n",
+       "      <td>[death, living]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     title             tags\n",
+       "0             black herald         [living]\n",
+       "1  black stone white stone         [living]\n",
+       "2          pari octob poem         [living]\n",
+       "3                     xiii  [death, living]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(dict(\n",
+    "    title=cv_df.title.values, \n",
+    "    tags=list(map(list, ycv_pred_regr)))\n",
     ")"
    ]
   }
