Constants quotechar added

--- a/notebook/03_embeddings_supervised.ipynb
+++ b/notebook/03_embeddings_supervised.ipynb
@@ -79,13 +79,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "setup_load:Dict = dict(\n",
     "    sep=Constants.PIPE_STR,\n",
-    "    quotechar='\"',\n",
+    "    quotechar=Constants.QUOTECHAR_STR,\n",
     "    quoting=csv.QUOTE_NONNUMERIC,\n",
     "    encoding=Constants.ENCODING\n",
     ")\n",
