supervised nbviewer added

--- a/notebook/03_embeddings_supervised.ipynb
+++ b/notebook/03_embeddings_supervised.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -58,8 +58,11 @@
     "from sklearn.ensemble import StackingClassifier\n",
     "from sklearn.pipeline import Pipeline\n",
     "\n",
+    "# metrics\n",
+    "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.metrics import jaccard_score # Métrica común para multilabel\n",
     "\n",
+    "# logs\n",
     "from sklearn.exceptions import ConvergenceWarning\n",
     "\n",
     "\n",
@@ -269,6 +272,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "roc_auc_score(y_test, y_pred, average='micro')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
@@ -385,6 +408,26 @@
     "jaccard_micro = jaccard_score(y_test, y_pred_regr, average='micro')\n",
     "\n",
     "print(f\"\\nJaccard Score (Micro): {jaccard_micro:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5365708323133302"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "roc_auc_score(y_test, y_pred_regr, average='micro')"
    ]
   },
   {
@@ -5881,6 +5924,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5771290158336126"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "roc_auc_score(y_test, y_pred_stack, average='micro')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [],
@@ -5963,6 +6026,18 @@
     "    title=cv_df.title.values, \n",
     "    tags=list(map(list, ycv_pred_regr)))\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualización completa del pipeline\n",
+    "\n",
+    "GitHub no renderiza diagramas HTML interactivos generados por scikit-learn.\n",
+    "Para ver la representación visual completa del pipeline, utiliza **nbviewer**:\n",
+    "\n",
+    "[03_embeddings_supervised.ipynb](https://nbviewer.org/github/HubertRonald/VersoVector/blob/main/notebook/03_embeddings_supervised.ipynb)"
    ]
   }
  ],
