unsupervised features added

--- a/notebook/04_embeddings_unsupervised.ipynb
+++ b/notebook/04_embeddings_unsupervised.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from __future__ import annotations\n",
     "import sys; sys.path.insert(0, '..')\n",
@@ -39,6 +30,7 @@
     "# utils\n",
     "from utils import Constants\n",
     "from modules.preprocesing import preprocess\n",
+    "from modules import build_feature_pipeline\n",
     "\n",
     "from wordcloud import WordCloud\n",
     "\n",
@@ -104,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,6 +307,26 @@
     "    poetry_df[['title', 'poem']],\n",
     "    cv_df[['title', 'poem']]\n",
     "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_pipeline = build_feature_pipeline()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_features = feature_pipeline.fit_transform(\n",
+    "    new_poems_df[\"poem\"].tolist()\n",
+    ")"
    ]
   },
   {
