--- a/notebook/02_feature_pipeline.ipynb
+++ b/notebook/02_feature_pipeline.ipynb
@@ -1305,6 +1305,18 @@
     "pipeline: Pipeline = build_feature_pipeline()\n",
     "pipeline"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualización completa del pipeline\n",
+    "\n",
+    "GitHub no renderiza diagramas HTML interactivos generados por scikit-learn.\n",
+    "Para ver la representación visual completa del pipeline, utiliza **nbviewer**:\n",
+    "\n",
+    "[02_feature_pipeline.ipynb](https://nbviewer.org/github/HubertRonald/VersoVector/blob/main/notebook/02_feature_pipeline.ipynb)"
+   ]
   }
  ],
  "metadata": {
