--- a/notebook/04_embeddings_unsupervised.ipynb
+++ b/notebook/04_embeddings_unsupervised.ipynb
@@ -76688,6 +76688,18 @@
     "vecinos = idxs[q][1:]  # sin el mismo\n",
     "new_poems_df.title.iloc[vecinos]\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualización completa del pipeline\n",
+    "\n",
+    "GitHub no renderiza diagramas HTML interactivos generados por scikit-learn.\n",
+    "Para ver la representación visual completa del pipeline, utiliza **nbviewer**:\n",
+    "\n",
+    "[04_embeddings_unsupervised.ipynb](https://nbviewer.org/github/HubertRonald/VersoVector/blob/main/notebook/04_embeddings_unsupervised.ipynb)"
+   ]
   }
  ],
  "metadata": {
